@@ -15,6 +15,7 @@ HLStats ChangeLog
 *) Fixed: timestamp option was not used correctly.
 *) Fixed: deleted lastUpdate column from player table. is now replaced with
 	skillchangeDate
+*) Fixed: players count per day
 *) Changed: L4D improvements. zombies are now handled as BOT to clear up
 	the stats
 *) Closed: #14
